<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hackergarten</string>
    <string name="button_register">Register</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="register_title">Hello World, Register to Hackergarten universe!</string>

    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="twitter">Twitter</string>
    <string name="blog">Blog</string>
    <string name="register">Register</string>
    <string name="register_failure">You cound not be registered at this time.</string>
    <string name="register_failure_email">Email is required.</string>
    <string name="register_success">Look at you, Hacker, we got you registered.</string>
    <string name="checkin">Check In!</string>
    
    <string name="test_event_subject">Android Hackergarten @Canoo</string>
    <string name="test_event_description">The goal of this Hackergarten is to write a base Android Hackergarten app.</string>
    <string name="test_event_date">28.9.2011</string>
    
</resources>
