<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/register_title"
    />
<TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TableRow android:id="@+id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/email" android:textAppearance="?android:attr/textAppearanceMedium" 
        				android:layout_width="match_parent"></TextView>
        <EditText android:id="@+id/editTextEmail" android:inputType="textEmailAddress" android:layout_height="wrap_content" android:layout_width="200dp">
        a</EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/name" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:id="@+id/editTextPersonName" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/company" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:id="@+id/editTextCompany" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow4" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/twitter" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:id="@+id/editTextTwitter" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView5" android:text="@string/blog" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:id="@+id/editTextBlog" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
    </TableRow>
</TableLayout>
<Button android:text="@string/register" android:layout_gravity="center" android:id="@+id/button_register" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
</LinearLayout>
